# BearCar

./: .gitignore  404.html  CITATION.cff  README.md  configs.json  index.html  learn.py  main.py  pyproject.toml  requirements.txt  search.html  server_env.yml  setup_pi_env.sh  sitemap.xml  train.py
BOM/: index.html
assembly/: index.html
assembly_guide/: index.html
bc_models/: bearnet.py
collect_data/: index.html
deploy/: index.html
docs/: mkdocs.yml
docs/docs/: BOM.md  assembly.md  assembly_guide.md  collect_data.md  deploy.md  (+5 more)
installation/: index.html
mechanical_designs/: haiboxing_bed_v2.FCStd  mew4_bed_v3.FCStd  original_rc_base.FCStd  ucaep_haiboxing_bed_v2.FCStd  ucaep_haiboxing_bed_v2.stl  ucaep_mew4_bed_v3.FCStd  ucaep_mew4_bed_v3.stl
pico_upython/: test_steering.py  test_throttle.py
pico_upython_scripts/: README.md  calibrate_throttle.py  main.py  test_light.py  test_steering.py  test_throttle.py
quick_start/: index.html
scripts/: autopilot.py  collect_data.py  configs.json  convnets.py  learn.py  pilot_architecture.py  teleop.py  train.py
search/: search_index.json
software/: index.html
tests/: cam_gpad_messenger.py  cam_gpad_pilot.py  cam_gpad_plt_messenger.py  cam_pilot.py  camera.py  gpad_messenger.py  image_array.npy  messenger.py  pilot.py
train/: index.html
unit_tests/: bearnet.py  cam_gpad_messenger.py  cam_gpad_pilot.py  cam_gpad_pilot.py.bak  cam_gpad_plt_messenger.py  cam_pad_pilot.py  cam_pilot.py  camera.py  camera_bearnet.py  gpad_messenger.py  messenger.py  pilot.py  visualization.py
wiring/: index.html
(+14 files in other folders)
